--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 Serverboy Cloud
-Version 0.3
+Version 0.4
 
 Cloud is a simple DB abstraction layer that makes it really easy to create
 awesome data-driven PHP apps in the least amount of time.
@@ -13,3 +13,20 @@ an ORM, however, records are amorphous: they do not have a model to adhere to.
 Rather than follow a model, the records are stored in what are called "tokens."
 
 More docs to come.
+
+
+License:
+
+Copyright 2011 Matt Basta, Serverboy Software
+
+Licensed under the Apache License, Version 2.0 (the "License");
+you may not use this file except in compliance with the License.
+You may obtain a copy of the License at
+
+	http://www.apache.org/licenses/LICENSE-2.0
+
+Unless required by applicable law or agreed to in writing, software
+distributed under the License is distributed on an "AS IS" BASIS,
+WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+See the License for the specific language governing permissions and
+limitations under the License.
