--- a/README
+++ b/README
@@ -1,3 +1,10 @@
+=============================================
+WARNING!
+
+This project is no longer maintained. Use it at your own risk!
+=============================================
+
+
 Serverboy Cloud
 Version 0.4
 
